5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1635_1054.log
== TEST (2019-04-03 17:52:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Coordenada x: "))
Y = float(input("Coordenada y: "))
if (2*x + y == 3):
	msg = "ponto pertence a reta"
else:
	msg = "ponto nao pertence a reta"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (2*x + y == 3):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:53:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Coordenada x: "))
Y = float(input("Coordenada y: "))
if (2 * X + Y == 3):
	msg = "ponto pertence a reta"
else:
	msg = "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:53:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = int(input("Coordenada x: "))
Y = int(input("Coordenada y: "))
if (2 * X + Y == 3):
	msg = "ponto pertence a reta"
else:
	msg = "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:53:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Coordenada x: "))
Y = float(input("Coordenada y: "))
if (2 * X + Y == 3):
	msg = "ponto pertence a reta"
else:
	msg = "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.214562
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
